--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="insert_tab">Insert Tab</string>
     <string name="open_file">Open File</string>
+    <string name="settings">Settings</string>
 </resources>
