--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="insert_tab">Insert Tab</string>
     <string name="open_file">Open File</string>
     <string name="settings">Settings</string>
+    <string name="save_file">Save File</string>
 </resources>
