--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="save_file">Save File</string>
     <string name="pref_show_tab_tool_summary">Whether to show an Insert Tab button in the toolbar. Will take effect next time you restart the app.</string>
     <string name="pref_show_tab_tool">Show Tab Tool</string>
+    <string name="pref_autosave">Auto-save files</string>
+    <string name="pref_autosave_summary">If enabled, Enlightened will automatically save your changes.</string>
 </resources>
