--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Enlightened</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="insert_tab">Insert Tab</string>
     <string name="open_file">Open File</string>
@@ -13,4 +11,10 @@
     <string name="pref_autosave_summary">If enabled, Enlightened will automatically save your changes.</string>
     <string name="pref_font_size_summary">The font size for the code editor</string>
     <string name="pref_font_size">Font Size</string>
+    <string name="prefs_header_editor">Editor Preferences</string>
+    <string name="save_file_as">Save As</string>
+
+    <string name="drawer_open">Open drawer</string>
+    <string name="drawer_close">Close drawer</string>
+    <string name="no_recent_files">No Recent Files</string>
 </resources>
