--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,12 @@
     <string name="open_file">Open File</string>
     <string name="settings">Settings</string>
     <string name="save_file">Save File</string>
+    <string name="save_file_as">Save As</string>
+
+    <string name="drawer_open">Open drawer</string>
+    <string name="drawer_close">Close drawer</string>
+    <string name="no_recent_files">No Recent Files</string>
+
     <string name="pref_show_tab_tool_summary">Whether to show an Insert Tab button in the toolbar.</string>
     <string name="pref_show_tab_tool">Show Tab Tool</string>
     <string name="pref_autosave">Auto-save files</string>
@@ -12,9 +18,12 @@
     <string name="pref_font_size_summary">The font size for the code editor</string>
     <string name="pref_font_size">Font Size</string>
     <string name="prefs_header_editor">Editor Preferences</string>
-    <string name="save_file_as">Save As</string>
+    <string name="pref_about">About Enlightened</string>
+    <string name="pref_about_summary">Information about Enlightened Editor</string>
+    <string name="prefs_header_about">About</string>
+    <string name="prefs_header_codehighlighting">Code Highlighting</string>
+    <string name="pref_codehighlighting_import_summary">Import custom language support syntax and color highlighting schemes.</string>
+    <string name="pref_codehighlighting_import">Import Highlighting Definitions</string>
 
-    <string name="drawer_open">Open drawer</string>
-    <string name="drawer_close">Close drawer</string>
-    <string name="no_recent_files">No Recent Files</string>
+
 </resources>
